--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,3 +5,19 @@ bind-key C-T send-prefix
 
 # Disable mouse.
 set-option -g mouse off
+
+#
+# COPY MODE
+#
+
+# Set vi copy mode.
+set-window-option -g mode-keys vi
+
+# Enter copy mode.
+bind-key [ copy-mode
+bind-key ] paste-buffer
+
+# Integrate with X clipboard.
+# https://wiki.archlinux.org/title/Tmux#X_clipboard_integration
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel \
+  "xsel --input --primary && xsel --output --primary | xsel --input --clipboard"
