--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,10 @@ bind-key C-T send-prefix
 # Disable mouse.
 set-option -g mouse off
 
+# Start window and pane indexes at 1, not 0.
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
 #
 # COPY MODE
 #
