--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,9 +6,16 @@ bind-key C-T send-prefix
 # Disable mouse.
 set-option -g mouse off
 
+#
+# WINDOWS AND PANES
+#
+
 # Start window and pane indexes at 1, not 0.
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+
+# Maintain sequential window order in status bar.
+set-option -g renumber-windows on
 
 #
 # COPY MODE
