--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,9 @@ bind-key C-T send-prefix
 # Disable mouse.
 set-option -g mouse off
 
+# Ensure color accuracy.
+set-option -g default-terminal "tmux-256color"
+
 #
 # WINDOWS AND PANES
 #
