--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,20 @@
-# Set prefix to <C-T>.
-unbind-key C-B
-set-option -g prefix C-T
-bind-key C-T send-prefix
-
 # Disable mouse.
 set-option -g mouse off
 
 # Ensure color accuracy.
 set-option -g default-terminal "tmux-256color"
+
+#
+# PREFIX
+#
+
+# Set prefix to <C-T>.
+unbind-key C-B
+set-option -g prefix C-T
+bind-key C-T send-prefix
+
+# Set escape time to 10ms.
+set-option -sg escape-time 10
 
 #
 # WINDOWS AND PANES
