--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,6 +43,9 @@ bind-key ] paste-buffer
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel \
   "xsel --input --primary && xsel --output --primary | xsel --input --clipboard"
 
+# Scrollback buffer size.
+set-option -g history-limit 5000
+
 #
 # STATUS BAR
 #
