--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,10 @@ set-option -g renumber-windows on
 unbind-key f
 bind-key C-F command-prompt "find-window -Z -- '%%'"
 
+# Create windows.
+unbind-key c
+bind-key C-O new-window
+
 #
 # COPY MODE
 #
