--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,6 +44,10 @@ bind-key C-N next-window
 unbind-key p
 bind-key C-P previous-window
 
+# Rename windows.
+unbind-key ,
+bind-key N command-prompt -I "#W" "rename-window -- '%%'"
+
 #
 # COPY MODE
 #
