--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,6 +48,12 @@ bind-key C-P previous-window
 unbind-key ,
 bind-key N command-prompt -I "#W" "rename-window -- '%%'"
 
+# Create panes.
+unbind-key %
+bind-key C-V split-window -h
+unbind-key '"'
+bind-key C-S split-window -v
+
 #
 # COPY MODE
 #
