--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,6 +70,9 @@ bind-key -r L resize-pane -R 5
 bind-key -r J resize-pane -D 5
 bind-key -r H resize-pane -L 5
 
+# Toggle pane between zoomed (full-screen) and unzoomed.
+bind-key C-T resize-pane -Z
+
 #
 # COPY MODE
 #
