--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 [submodule "nvim/pack/plugins/start/nvim-lspconfig"]
 	path = nvim/pack/plugins/start/nvim-lspconfig
 	url = https://github.com/neovim/nvim-lspconfig
+[submodule "nvim/pack/plugins/start/copilot.vim"]
+	path = nvim/pack/plugins/start/copilot.vim
+	url = https://github.com/github/copilot.vim.git
