--- a/sway/config
+++ b/sway/config
@@ -19,12 +19,7 @@ set $term foot
 # Preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu exec $term --app-id=launcher bash -c \
-  "compgen -c \
-  | rg --invert-match fzf \
-  | sort --unique \
-  | fzf --layout=reverse \
-  | xargs --no-run-if-empty swaymsg exec --"
+set $menu wmenu-run
 for_window [app_id="launcher"] floating enable
 
 # Preferred screen brightness control utility
