Copy tmux clipboard contents to system clipboard
This is required for macOS. It won't work on Linux unless the user has a
`pbcopy` alias defined.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -94,8 +94,7 @@ bind-key ] paste-buffer
 
 # Integrate with X clipboard.
 # https://wiki.archlinux.org/title/Tmux#X_clipboard_integration
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel \
-  "xsel --input --primary && xsel --output --primary | xsel --input --clipboard"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Scrollback buffer size.
 set-option -g history-limit 5000
