--- a/aider/aider.conf.yml
+++ b/aider/aider.conf.yml
@@ -1,6 +1,6 @@
 # https://aider.chat/docs/config/aider_conf.html
 
-auto-commits: true
+auto-commits: false
 gitignore: false
 vim: true
 watch-files: true
